--- a/public/main.css
+++ b/public/main.css
@@ -23,3 +23,8 @@ h1 {
     line-height: 34px;
     color: rgba(255, 255, 255, 0.87);
 }
+
+.deleteButton {
+    background-color: rgba(255, 0, 0, 0.5);
+    font-side: 66px;
+}
