--- a/public/main.css
+++ b/public/main.css
@@ -28,3 +28,8 @@ h1 {
     background-color: rgba(255, 0, 0, 0.5);
     font-side: 66px;
 }
+
+.completeButton {
+    background-color: rgba(0, 255, 0, 0.5);
+    font-side: 66px;
+}
