Add functionality to update buttons and visual update on completion in todo list

--- a/public/main.css
+++ b/public/main.css
@@ -33,3 +33,7 @@ h1 {
     background-color: rgba(0, 255, 0, 0.5);
     font-side: 66px;
 }
+
+.completedTodoItem {
+    color: rgba(0, 90, 255, 0.9);
+}
